crates/math-core/tests/snapshots/error_test__def_name_only.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz"
---
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:9 ]
   │
 1 │ \def\zzz
   │         │ 
   │         ╰─ expected an argument here
───╯
