crates/math-core/tests/snapshots/error_test__def_parameter_out_of_order.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz#2{1}"
---
Error: Expected parameter #1, found #2. Parameters must be numbered consecutively, starting at 1.
   ╭─[ <input>:1:9 ]
   │
 1 │ \def\zzz#2{1}
   │         ─┬  
   │          ╰── unexpected parameter number
───╯
