crates/math-core/tests/snapshots/error_test__def_parameter_out_of_range.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz#1{#2}"
---
Error: Parameter number 2 is out of range. Expected a number of at most 1.
   ╭─[ <input>:1:12 ]
   │
 1 │ \def\zzz#1{#2}
   │            ─┬  
   │             ╰── parameter number out of range
───╯
