crates/math-core/tests/snapshots/error_test__def_space_before_body.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz#1 {1}"
---
Error: Delimited parameters are not supported. Expected "#n" or "{" here.
   ╭─[ <input>:1:11 ]
   │
 1 │ \def\zzz#1 {1}
   │           ┬  
   │           ╰── unsupported delimiter
───╯
