crates/math-core/tests/snapshots/error_test__def_unclosed_body.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz{1"
---
Error: Expected closing token "}", but reached end of input.
   ╭─[ <input>:1:11 ]
   │
 1 │ \def\zzz{1
   │           │ 
   │           ╰─ a group was never closed
───╯
