crates/math-core/tests/snapshots/error_test__def_unknown_cmd_in_body.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def\\zzz{\\asdf}\\zzz"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:16 ]
   │
 1 │ \def\zzz{\asdf}\zzz
   │                ──┬─  
   │                  ╰─── unknown command
───╯
